--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
@@ -19,12 +21,16 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.13.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
